...
    <string name="app_name">Location Reminders</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
...
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="no_location_selected">No location selected</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="geofence_radius_description">Your geofence radius has %s meters</string>
    <string name="geofence_location_description">Within %sm from %s</string>
    <string name="reminder_location_description">Centered at coordinates: %1$.5f, %2$.5f</string>
    <string name="unknown_location">Unknown Location (coordinates: %1$.5f, %2$.5f)</string>
    <string name="tos">By continuing you are indicating that you accept our Terms of Service and Privacy Policy</string>
    <string name="illustrative_treasure_hunt_map">Illustrative treasure hunt map</string>
    <string name="sign_in">Sign-in</string>
    <string name="sign_in_with_google">Sign-in with Google</string>
...
