...
            android:padding="@dimen/padding_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/placeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.locationReminder.location}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/unknown_location" />

            <SeekBar
                android:id="@+id/radiusSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:max="300"
                android:min="10"
                android:progress="@={vm.roundGeofenceRadiusSelection}"
                app:layout_constraintBottom_toTopOf="@id/radiusExplanation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/placeName"
                tools:progress="150" />

            <TextView
...
